--- a/styles.css
+++ b/styles.css
@@ -18,14 +18,14 @@
 
 .img{
   position: absolute;
-    top: 50%;
-    left: 30%;
+    top: 53%;
+    left: 32%;
     transform: translate(-30%, -50%);
-    max-width: 35%; 
+    max-width: 100vw; 
     max-height: auto; 
-    width: auto; 
+    width: 550px; 
     height: auto; 
-    display: block;
+    display: flex;
   }
 
 .intro {
@@ -864,3 +864,4 @@
       font-size: 130%;
     }
 }
+
